Bug: Fixed table overflow

--- a/src/app/components/statistics/statistics.component.scss
+++ b/src/app/components/statistics/statistics.component.scss
@@ -66,26 +66,31 @@
     left: 0;
     top: 0;
     width: 100vw;
-    height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
     display: flex;
+    height: 100vh;
     .report {
-        margin: auto;
+        margin: 5vh auto 0px auto;
         width: 80%;
         background-color: white;
+        border-radius: 15px 15px 0 0;
+        height: fit-content;
         .heading {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-start;
             padding: 10px;
             h1 {
                 margin: 5px;
             }
             fa-icon {
                 font-size: 20px;
+                text-align: end;
                 &:hover {
                     cursor: pointer;
+                    color: red;
+                    transition: color 0.5s ease;
                 }
             }
         }
@@ -118,9 +123,7 @@
                 }
             }
             .table {
-                max-height: 600px;
                 overflow-y: auto;
-                overflow-x: auto;
                 table {
                     width: 100%;
                     border-collapse: separate;
